feat: add device esp separation and new device data mutation

--- a/esp_devices/dht_sensor/platformio.ini
+++ b/esp_devices/dht_sensor/platformio.ini
@@ -1,12 +1,12 @@
-[env:nodemcuv2]
+[env:d1_mini_pro]
 platform = espressif8266
-board = nodemcuv2
+board = d1_mini_pro
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 lib_deps = 
   esphome/ESPAsyncWebServer-esphome@^3.3.0
-	ESPAsyncTCP
-	ArduinoJson
-	LittleFS
+  ESPAsyncTCP
+  ArduinoJson
+  DHT sensor library
+  LittleFS
